// Original file: proto/location_service.proto

import type { PersonLocation as _locationservice_PersonLocation, PersonLocation__Output as _locationservice_PersonLocation__Output } from '../locationservice/PersonLocation';

export interface LocationResponse {
  'personLocation'?: (_locationservice_PersonLocation)[];
}

export interface LocationResponse__Output {
  'personLocation': (_locationservice_PersonLocation__Output)[];
}
